# iced_plot

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: auto_backend.rs  backends.rs  bad_apple.rs  controls_toggles.rs  custom_ticks.rs  fills.rs  heatmap.rs  high_precision.rs  huge_scatter.rs  interactive_spline.rs  line_only.rs  log_scale.rs  manual_controls.rs  plot_overlays.rs  reference_lines.rs  scrolling_plot.rs  themes_and_styles.rs  three_plots.rs  transform.rs  view_with_shapes.rs  waves.rs
src/: axes_labels.rs  axis_link.rs  axis_scale.rs  camera.rs  controls.rs  fill.rs  grid.rs  legend.rs  lib.rs  message.rs  picking.rs  plot_overlay.rs  plot_renderer.rs  plot_state.rs  plot_widget.rs  plot_widget_builder.rs  point.rs  reference_lines.rs  series.rs  shape.rs  style.rs  ticks.rs  transform.rs  widget.rs
src/plot_renderer/: canvas.rs  mod.rs  shader.rs
src/shaders/: composite.wgsl  fill.wgsl  grid.wgsl  line.wgsl  markers.wgsl  pick_markers.wgsl
