[package]
name    = "iced_plot"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
bytemuck = { version = "1.24", features = ["derive"] }
glam     = "0.30"
iced     = { git = "https://github.com/iced-rs/iced", rev = "bfc27e4" }

[dev-dependencies]
rand       = "0.9"
rand_distr = "0.5"
