[package]
name        = "iced_plot"
version     = "0.1.0"
edition     = "2024"
license     = "MIT"
description = "A GPU-accelerated plotting widget for Iced."
repository  = "https://github.com/donkeyteethUX/iced_plot/"
homepage    = "https://github.com/donkeyteethUX/iced_plot/"
readme      = "README.md"
categories  = ["gui", "graphics", "visualization"]
keywords    = ["iced", "plot", "widget", "wgpu", "plotting"]

[dependencies]
bytemuck = { version = "1.24", features = ["derive"] }
glam     = "0.30"
iced     = "0.14"

[dev-dependencies]
rand       = "0.9"
rand_distr = "0.5"
