[package]
name        = "iced_plot"
version     = "0.4.0"
edition     = "2024"
license     = "MIT"
description = "A GPU-accelerated plotting widget for Iced."
repository  = "https://github.com/donkeyteethUX/iced_plot/"
homepage    = "https://github.com/donkeyteethUX/iced_plot/"
readme      = "README.md"
categories  = ["gui", "graphics", "visualization"]
keywords    = ["iced", "plot", "widget", "wgpu", "plotting"]

[dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
glam     = "0.25"
iced     = "0.14"
indexmap = "2.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
rand       = "0.10"
rand_distr = "0.6"
